# rust-simple-signal

./: Cargo.toml  README.md
examples/: readme_example.rs  simple.rs
src/: lib.rs
