[package]

name = "simple-signal"
version = "1.1.1"
authors = ["Antti Keränen <detegr@gmail.com>", "Alexey Voznyuk <me@swizard.info>"]
license = "MIT"
keywords = ["signal", "SIGINT", "SIGTERM", "SIGQUIT", "SIGABRT"]
description = "Easy unix signals handler for Rust projects"
homepage = "https://github.com/swizard0/rust-simple-signal"
repository = "https://github.com/swizard0/rust-simple-signal.git"

[lib]
name = "simple_signal"

[dependencies]
libc = "0.2"

[dependencies.lazy_static]
version = "1.0"
optional = true

[features]
default = ["stable"]
nightly = []
stable = ["lazy_static"]
